[package]
name = "crates-top"
version = "0.1.0"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "server"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = [ "derive" ] }
