[package]
name = "crates-top"
version = "0.1.0"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "crates-top"

[dependencies]
clap = "2.33"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["json"] }
serde = { version = "1.0", features = [ "derive" ] }
